Bug 79780 - Icons not accessible after opening properties dialog in template manager
Summary: Icons not accessible after opening properties dialog in template manager
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.4.2 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2 ta...
Keywords:
Depends on:
Blocks: Matters-to-Caolan Template-Manager
  Show dependency treegraph
 
Reported: 2014-06-07 21:42 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-10-08 20:09 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
after closing the properties dialog, i moved my mouse over 'Edit' and no reaction (36.42 KB, image/png)
2014-06-07 21:42 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-06-07 21:42:04 UTC
Created attachment 100621 [details]
after closing the properties dialog, i moved my mouse over 'Edit' and no reaction

When in the template manager, you select a template and then press the properties button. once you close the dialog, none of the other icons are accessible unless you click two or three times. Tested in Linux Mint in 4.2.4 and 4.3 beta.
Comment 1 Cor Nouws 2014-06-08 08:38:37 UTC
Hi Jay,

IIRC, this has been solved in 4.3... Do not remember the issue # ...

(BTW, there's a query Templatemanager, that you can access via your References > Saved searches of your BugZilla account.)
Comment 2 Yousuf Philips (jay) (retired) 2014-06-08 09:39:57 UTC
(In reply to comment #1)
> Hi Jay,

Hi Cor,

> 
> IIRC, this has been solved in 4.3... Do not remember the issue # ...
> 

Well i'm running 4.3 for 7th of June and its still here.

> (BTW, there's a query Templatemanager, that you can access via your
> References > Saved searches of your BugZilla account.)

Thanks for the notice, i hadnt checked the saved searches page in preferences before. :)
Comment 3 V Stuart Foote 2014-06-08 15:50:31 UTC
On Windows 7 sp1, 64-bit (en-US) with
Version: 4.3.0.0.beta2
Build ID: a06aa316117a6ff0f05c697c82831c227812d810

There are subtle differences between keyboard only and mouse driven navigation of Template Manager UI. This is likely a GTK UI focus issue in navigating the Thumbnail view panels of Template Manager. Andrzej had to tweak things to make the keyboard navigation correct. See bug 73766.

When working only with keyboard, the Close button for the Properties dialog correctly returns focus to the Horizontal menu (Open, Edit, Properties, ...) positioning to the Open action.

But it looks like there now is a loss of parent relation following close of the template's Properties dialog when using mouse to navigate GUI. Not clear where focus goes at that point.

Simple work around is for an extra mouse click on the thumbnail view panel (but not on a thumbnail) -- which returns focus to the thumbnail view panel. Mouse over focus, and keyboard navigation is restored to reasonable.

Efe has the Template Manager as his 2014 GSOC project, maybe he and Kendy can poke at it.
Comment 4 V Stuart Foote 2014-06-08 15:57:54 UTC
Adjusting release up to 4.2.4 - not applicable to 4.1 and earlier. Nor to pre 4.2.4 as this aspect of Template manager was reworked subsequent to that point.
Comment 5 Oliver Haessler 2015-03-12 11:07:47 UTC
I can see the same thing on 4.3.6.2.

It is not just the Icons that are not working, but also you can not select any other Template Thumbnail before you clicked on an empty space (as already mentioned in the last comment).

Now i can also see that the Name of the Template (under the thumbnail) is disappearing at some point.

To reproduce:
1. click on File > New > Templates
2. double click on Presentation Backgrounds
3. click on "Abstract Green"
4. click on "Properties"
5. click on "Close"
6. hover over any other Thumbnail and the black text under the thumbnail turns white (it is still there)

you can get the text back if there are enough Backgrounds that you have to scroll, but if there is no scrollbar, you have to close the Template Manager and reopen it.
Comment 6 Commit Notification 2015-06-07 16:56:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6aee70ec9075b19fdbaccd10522552e3d1d4aeb0

Resolves: tdf#79780 use SelectHdl instead of ClickHdl

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-06-07 16:56:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b84c8a46875c14640c51dbb66b22e010850402c&h=libreoffice-5-0

Resolves: tdf#79780 use SelectHdl instead of ClickHdl

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-06-08 13:41:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55cc8a0210a7f93b6b2893a781a2456ea18b5434&h=libreoffice-4-4

Resolves: tdf#79780 use SelectHdl instead of ClickHdl

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.