Resolves: tdf#79780 use SelectHdl instead of ClickHdl

ClickHdl happens on the "down" of the click, not the
"up" of the click, so the up gets lost and control
isn't returned to the parent widget, so extra clicks
are needed to give control back to it

Change-Id: I79023d2959377ff70aa890690dde5ce852c9549e